--- a/package.json
+++ b/package.json
@@ -1,17 +1,25 @@
 {
-  "name": "notion-snap",
-  "version": "1.4.0",
-  "description": "A snap of Notion",
-  "main": "main.js",
-  "scripts": {
-    "start": "electron .",
-    "dist": "electron-builder --linux snap"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "electron": "18.2.4",
-    "electron-builder": "23.0.3"
-  }
+	"name": "Notion",
+	"version": "1.0",
+	"description": "Notion RPM for Fedora",
+	"main": "main.js",
+	"scripts": {
+		"start": "electron-forge start",
+		"package": "electron-forge package",
+		"make": "electron-forge make"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"devDependencies": {
+		"@electron-forge/cli": "^6.0.5",
+		"@electron-forge/maker-deb": "^6.0.5",
+		"@electron-forge/maker-rpm": "^6.0.5",
+		"@electron-forge/maker-squirrel": "^6.0.5",
+		"@electron-forge/maker-zip": "^6.0.5",
+		"electron": "18.2.4"
+	},
+	"dependencies": {
+		"electron-squirrel-startup": "^1.0.0"
+	}
 }
