--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
 		"@electron-forge/maker-rpm": "^6.0.5",
 		"@electron-forge/maker-squirrel": "^6.0.5",
 		"@electron-forge/maker-zip": "^6.0.5",
-		"electron": "18.2.4"
+		"electron": "^27.0.0"
 	},
 	"dependencies": {
 		"electron-squirrel-startup": "^1.0.0"
