--- a/package.json
+++ b/package.json
@@ -12,14 +12,16 @@
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
-		"@electron-forge/cli": "^6.0.5",
-		"@electron-forge/maker-deb": "^6.0.5",
-		"@electron-forge/maker-rpm": "^6.0.5",
-		"@electron-forge/maker-squirrel": "^6.0.5",
-		"@electron-forge/maker-zip": "^6.0.5",
-		"electron": "^27.0.0"
+		"@electron-forge/cli": "^7.2.0",
+		"@electron-forge/maker-deb": "^7.2.0",
+		"@electron-forge/maker-rpm": "^7.2.0",
+		"@electron-forge/maker-squirrel": "^7.2.0",
+		"@electron-forge/maker-zip": "^7.2.0",
+		"electron": "^28.2.0"
 	},
 	"dependencies": {
+		"@electron/asar": "^3.2.8",
+		"@npmcli/fs": "^3.1.0",
 		"electron-squirrel-startup": "^1.0.0"
 	}
 }
